--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <title>recipe website</title>
     </head>
 
 
     <body>
-
-
+        <h1>Odin Recipes</h1>
+        <a href="recipies/pasta-sauce.html">Pasta Sauce</a>
     </body>
 
 
