--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipies/pasta-sauce.html">Pasta Sauce</a>
+
+        <p>
+            <a href="recipies/cosmopolitan.html">Cosmopolitan
+            Cocktail</a>
+        </p>
     </body>
 
 
