Create the cookies recipe page and link it to home page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <a href="recipies/cosmopolitan.html">Cosmopolitan
             Cocktail</a>
         </p>
+        <p>
+            <a href="recipies/cookies.html">Chocolate Chip Cookies</a>
+        </p>
     </body>
 
 
