--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>recipe website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
 
     <body>
         <h1>Odin Recipes</h1>
+        
+        <p>
+            <img src="/images/DALL·E 2023-01-31 18.00.12.png" alt="a picture
+        of odin as a chef">
+        </p>
+
         <a href="recipies/pasta-sauce.html">Pasta Sauce</a>
 
         <p>
