--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
 
 
-    <body>
-        <h1>Odin Recipes</h1>
+    <body class="main-page">
+        <h1 class="main-page">Odin Recipes</h1>
         
         <p>
-            <img src="/images/DALL·E 2023-01-31 18.00.12.png" alt="a picture
-        of odin as a chef">
+            <img class="main-page" src="images/odin-chef.png" alt="a picture
+            of odin as a chef">
         </p>
 
         <a href="recipies/pasta-sauce.html">Pasta Sauce</a>
