Design cosmopolitan page

--- a/recipies/cosmopolitan.html
+++ b/recipies/cosmopolitan.html
@@ -1,31 +1,37 @@
-<h1>Cosmopolitan Cocktail</h1>
-    <img
-    src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/cosmopolitan-7a6874f.jpg?quality=90&resize=440,400"
-    alt="A picture of the cosmopolitan cocktail">
+<head>
+    <link rel="stylesheet" href="../style.css">
+</head>
 
-<h3>Description</h3>
-    <p>
-        It's got a brilliant pink color and tangy, refreshing flavor: yes, it's a Cosmo! A Cosmopolitan cocktail, to be exact. This great cocktail is ready to spice up your next gathering, be it a dinner party or drinks on the patio with friends.
-    </p>
-    <p>
-        What's in a Cosmo? The classic version of this cocktail uses Citron vodka, cranberry juice (usually sweetened), Cointreau, and lime.
-    </p>
+<body class="cosmo-page">
+    <h1 id="cosmo-header">Cosmopolitan Cocktail</h1>
+        <img
+        src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/cosmopolitan-7a6874f.jpg?quality=90&resize=440,400"
+        alt="A picture of the cosmopolitan cocktail">
 
-<h4>Ingredients</h4>
-    <p>Serving Size: 1</p>
-    <ul>
-        <li>1 1/2 ounces vodka</li>
-        <li>1/2 ounce Cointreau</li>
-        <li>1 1/2 ounces cranberry juice</li>
-        <li>1 ounce sweet and sour lime mix</li>
-        <li>Garnish: lime peel</li>
-    </ul>
+    <h3 class="cosmo-page">Description</h3>
+        <p>
+            It's got a brilliant pink color and tangy, refreshing flavor: yes, it's a Cosmo! A Cosmopolitan cocktail, to be exact. This great cocktail is ready to spice up your next gathering, be it a dinner party or drinks on the patio with friends.
+        </p>
+        <p>
+            What's in a Cosmo? The classic version of this cocktail uses Citron vodka, cranberry juice (usually sweetened), Cointreau, and lime.
+        </p>
 
-<h4>Steps</h4>
-    <ol>
-        <li>Add the vodka, Cointreau, lime juice, and cranberry juice
-        cocktail into a shaker with ice and shake until
-        well-chilled.</li>
-        <li>Strain into a chilled cocktail glass.</li>
-        <li>Garnish with a lime peel.</li>
-    </ol>
+    <h4 class="cosmo-page">Ingredients</h4>
+        <p>Serving Size: 1</p>
+        <ul class="cosmo-list">
+            <li>1 1/2 ounces vodka</li>
+            <li>1/2 ounce Cointreau</li>
+            <li>1 1/2 ounces cranberry juice</li>
+            <li>1 ounce sweet and sour lime mix</li>
+            <li>Garnish: lime peel</li>
+        </ul>
+
+    <h4 class="cosmo-page">Steps</h4>
+        <ol class="cosmo-list">
+            <li>Add the vodka, Cointreau, lime juice, and cranberry juice
+            cocktail into a shaker with ice and shake until
+            well-chilled.</li>
+            <li>Strain into a chilled cocktail glass.</li>
+            <li>Garnish with a lime peel.</li>
+        </ol>
+</body>
